# richless

./: AGENTS.md  LICENSE  PRD.md  README.md  RELEASING.md  TODO.md  mdless-init.sh  mdless.py  pyproject.toml  richless-init.sh  richless.py  test.md
.github/workflows/: publish.yml  tests.yml
scripts/: generate-formula.py
tests/: conftest.py  test_mdless.py  test_richless.py
tests/fixtures/: test-mcp-config.yaml  test-with-comments.yaml  test.html  test.js  test.json  test.jsonl  test.md  test.pl  test.py  test.rb  test.sh  test.toml  test.txt  test.xml  test.yaml
