[project]
name = "richless"
version = "0.2.1"
description = "LESSOPEN filter for Markdown rendering and syntax highlighting with less"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.0",
    "pygments>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
richless = "richless:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["richless.py", "richless-init.sh", "LICENSE", "README.md"]
